k8s-cluster-configuration/applications/generalized/base/networking/service.yml
apiVersion: v1
kind: Service
metadata:
  name: generalized-service
  namespace: generalized
spec:
  selector:
    app: generalized
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
